Move public to root and add gulp.

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,23 @@
-/vendor
-composer.lock
+.sass-cache
+.idea
 .env
-
-/public/wordpress
-/public/wp-content/*
-!/public/wp-content/themes
-!/public/wp-content/index.php
+node_modules
+bower_components
+vendor
+wordpress
+composer.lock
+.htaccess
+sitemap.xml
+wp-content/plugins
+wp-content/advanced-cache.php
+wp-content/backup-db/
+wp-content/backups/
+wp-content/blogs.dir/
+wp-content/cache/
+wp-content/upgrade/
+wp-content/uploads/
+wp-content/wp-cache-config.php
+wp-content/themes/*/assets/script.js
+wp-content/themes/*/assets/style.css
+config/database.php
+config/local/database.php
