--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,2 @@
 WP_ENV=local
-WP_DEBUG=false
-WP_THEME=wordplate
-
-DB_HOST=localhost
-DB_NAME=wordpress
-DB_USER=homestead
-DB_PASSWORD=secret
-
-GOOGLE_ANALYTICS_ID=
-
-AUTH_KEY=yourrandomstring
-SECURE_AUTH_KEY=yourrandomstring
-LOGGED_IN_KEY=yourrandomstring
-NONCE_KEY=yourrandomstring
-AUTH_SALT=yourrandomstring
-SECURE_AUTH_SALT=yourrandomstring
-LOGGED_IN_SALT=yourrandomstring
-NONCE_SALT=yourrandomstring
+WP_DEBUG=true
